Fix: Back button was being clipped in focus state in TV layout

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -1014,3 +1014,7 @@ div[data-role=controlgroup] a.ui-btn-active {
     color: inherit;
     background-color: var(--selectorBackgroundColor);
 }
+
+.headerLeft, .skinHeader {
+overflow: unset;
+}
